--- a/src/_includes/en/nav.html
+++ b/src/_includes/en/nav.html
@@ -39,5 +39,5 @@
 	<a href="https://github.com/finom/matreshka/releases">What's new?</a>
 	<a href="forum/" target="_blank" class="forum-link">Forum</a>
 	<a href="//ru.matreshka.io" class="another-language"><i></i> In Russian</a>
-	<a>Last update: {{site.time | date: "%Y-%m-%d" }}</a>
+	<a>Updated at {{site.time | date: "%Y-%m-%d" }}</a>
 </nav>
