--- a/src/sass/site/_promo.scss
+++ b/src/sass/site/_promo.scss
@@ -94,10 +94,15 @@
 			}
 		}
 
+		code, pre {
+			text-align: left!important;
+		}
+
 		pre {
 			max-width: 540px;
 			margin: 0 auto;
-			text-align: left;
+
+
 		}
 	}
 
