--- a/src/_includes/en/nav.html
+++ b/src/_includes/en/nav.html
@@ -32,7 +32,9 @@
 
 	<hr>
 	<span class="nav-heading">Articles</span>
-	<a>Coming soon...</a>
+	<a href="https://medium.com/@finom/matreshka-js-from-simple-to-simple-a52db6884a9d">Tutorial</a>
+	<a href="https://medium.com/@finom/10-reasons-to-try-matreshka-37d69d88bac5">10 reasons to try</a>
+	<a>Events (coming in a day)</a>
 
 	<hr>
 	<span class="nav-heading">Links</span>
