trying to fix long loading issue

--- a/src/_layouts/main.html
+++ b/src/_layouts/main.html
@@ -43,6 +43,11 @@
 				}
 			});
 		}
+
+		// remove loader on slow load
+		setTimeout(function() {
+			document.querySelector('.loader').className += ' hide';
+		}, 10000);
 		</script>
 		<style>
 			.loader {
