changed links to eng articles

--- a/src/_includes/en/nav.html
+++ b/src/_includes/en/nav.html
@@ -32,9 +32,9 @@
 
 	<hr>
 	<span class="nav-heading">Articles</span>
-	<a href="https://medium.com/@finom/matreshka-js-from-simple-to-simple-a52db6884a9d">Tutorial</a>
-	<a href="https://medium.com/@finom/10-reasons-to-try-matreshka-37d69d88bac5">10 reasons to try</a>
-	<a href="https://medium.com/@finom/matreshka-js-events-e35cc201c2cb">Events</a>
+	<a href="https://github.com/matreshkajs/matreshka/wiki/Matreshka.js:-From-simple-to-simple">Tutorial</a>
+	<a href="https://github.com/matreshkajs/matreshka/wiki/10-reasons-to-try-Matreshka">10 reasons to try</a>
+	<a href="https://github.com/matreshkajs/matreshka/wiki/Matreshka.js:-Events">Events</a>
 
 	<hr>
 	<span class="nav-heading">Links</span>
