improved external links style; added social links; improved examples design

--- a/src/_includes/ru/doc_content.html
+++ b/src/_includes/ru/doc_content.html
@@ -86,11 +86,10 @@ var app = new Application();</code></pre><p><strong>3.</strong> Это всё!</
 <pre class="prettyprint source lang-js"><code>require(['path/to/matreshka'], function(Matreshka) {
     //...
 });</code></pre><p>Импорт в стиле EcmaScript6 (используя Babel)</p>
-<pre class="prettyprint source lang-js"><code>import Matreshka from 'path/to/matreshka';</code></pre></article><article id="!examples"><h2><a href="#!examples">Примеры</a></h2><p>1) <a href="http://gh-embed.matreshka.io/v0/finom/matreshka_todomvc_ru/?ref=gh-pages">TodoMVC</a></p>
-<p>(<a href="http://finom.github.io/matreshka_todomvc_ru/docs/app.html">исходный код с аннотациями</a>)</p>
-<p>2) <a href="http://gh-embed.matreshka.io/v0/matreshkajs/matreshka_examples/treeview/?ref=gh-pages">TreeView</a></p>
-<p>3) <a href="http://gh-embed.matreshka.io/v0/matreshkajs/matreshka_examples/markdown_editor/?ref=gh-pages">Markdown editor</a></p>
-<p>4) <a href="http://gh-embed.matreshka.io/v0/matreshkajs/matreshka_examples/soundcloud_search/?ref=gh-pages">Simple SoundCloud player</a></p></article>
+<pre class="prettyprint source lang-js"><code>import Matreshka from 'path/to/matreshka';</code></pre></article><article id="!examples"><h2><a href="#!examples">Примеры</a></h2><p><span class="list-item-number">1.</span> <a href="http://gh-embed.matreshka.io/v0/finom/matreshka_todomvc_ru/?ref=gh-pages">TodoMVC</a> - список дел. (<a href="http://finom.github.io/matreshka_todomvc_ru/docs/app.html">Исходный код с аннотациями</a>)</p>
+<p><span class="list-item-number">2.</span> <a href="http://gh-embed.matreshka.io/v0/matreshkajs/matreshka_examples/treeview/?ref=gh-pages">TreeView</a> - древовидный список неограниченной вложенности.</p>
+<p><span class="list-item-number">3.</span> <a href="http://gh-embed.matreshka.io/v0/matreshkajs/matreshka_examples/markdown_editor/?ref=gh-pages">Markdown editor</a> - простейший редактор Markdown (13 строк кода).</p>
+<p><span class="list-item-number">4.</span> <a href="http://gh-embed.matreshka.io/v0/matreshkajs/matreshka_examples/soundcloud_search/?ref=gh-pages">Simple SoundCloud player</a> - поиск музыки, использующий SoundCloud API.</p></article>
 </section>
 <section class="api">
 
