--- a/src/_includes/en/promo.html
+++ b/src/_includes/en/promo.html
@@ -21,8 +21,12 @@ app.x = 'Event-driven JavaScript framework';
 			<a href="https://github.com/finom/matreshka" class="github-btn">Github <i></i></a>
 		</p>
 
-		<p><a href="https://gitter.im/matreshkajs/matreshka/">Join Matreshka chat</a></p>
-		<p><a href="https://twitter.com/matreshkajs">@matreshkajs in Twitter</a></p>
+		<div class="social">
+			<a href="https://twitter.com/matreshkajs" class="social-twitter">matreshkajs</a>
+			<a href="https://www.facebook.com/matreshkajs/" class="social-fb">matreshkajs</a>
+			<a href="http://matreshka.io/forum" class="social-forum">Forum</a>
+			<a href="https://gitter.im/matreshkajs/matreshka" class="social-gitter">Chat on Gitter</a>
+		</div>
 
 		<div class="sponsors">
 			<h3>Who's helping to the project?</h3>
