--- a/src/_includes/ru/promo.html
+++ b/src/_includes/ru/promo.html
@@ -22,8 +22,13 @@ app.x = 'Событийно-ориентированный фреймворк';
 			<a href="https://github.com/finom/matreshka" class="github-btn">Github <i></i></a>
 		</p>
 
-		<p><a href="https://gitter.im/matreshkajs/matreshka/ru">Чатик Матрешки</a></p>
-		<p><a href="https://twitter.com/matreshkajs">@matreshkajs в Твиттере</a></p>
+		<div class="social">
+			<a href="https://twitter.com/matreshkajs" class="social-twitter">matreshkajs</a>
+			<a href="https://vk.com/matreshkajs" class="social-vk">matreshkajs</a>
+			<a href="https://www.facebook.com/matreshkajs" class="social-fb">matreshkajs</a>
+			<a href="http://ru.matreshka.io/forum" class="social-forum">Форум</a>
+			<a href="https://gitter.im/matreshkajs/matreshka/ru" class="social-gitter">Чат в Gitter</a>
+		</div>
 
 		<div class="sponsors">
 			<h3>Кто помогает проекту?</h3>
