removed whatsnew in English

--- a/src/_includes/en/doc_menu.html
+++ b/src/_includes/en/doc_menu.html
@@ -99,6 +99,19 @@
 					
 			
 				<li>
+					<a href="#!Matreshka-bindSandbox"
+						title="Binds a sandbox"
+						data-name="bindSandbox"
+						data-since="1.5"
+						data-importance="3">
+						bindSandbox
+						
+						
+						
+					</a>
+					
+			
+				<li>
 					<a href="#!Matreshka-bound"
 						title="Returns the first bound element or null"
 						data-name="bound"
@@ -624,7 +637,7 @@
 			
 				<li>
 					<a href="#!Matreshka-$nodes"
-						title="An object contains collections (jQuery, Zepto, Balalaika) of bound nodes for quick access."
+						title="An object contains collections (jQuery, Zepto, bQuery) of bound nodes for quick access."
 						data-name="$nodes"
 						data-since="1.1"
 						data-importance="2">
@@ -636,7 +649,7 @@
 			
 				<li>
 					<a href="#!Matreshka-$sandbox"
-						title="The property contains HTML sandbox as collection (jQuery, Zepto, Balalaika)"
+						title="The property contains HTML sandbox as collection (jQuery, Zepto, bQuery)"
 						data-name="$sandbox"
 						data-since="0.4"
 						data-importance="2">
@@ -691,7 +704,7 @@
 				<li>
 					<a
 						href="#!Matreshka.$(static)"
-						title="A library used by Matreshka (jQuery, Zepto, Balalaika or others)"
+						title="A library used by Matreshka (jQuery, Zepto, bQuery or others)"
 						data-name="$"
 						
 						data-importance="2">
@@ -704,7 +717,7 @@
 				<li>
 					<a
 						href="#!Matreshka.$b"
-						title="Built-in micro-library Balalaika"
+						title="Built-in micro-library bQuery"
 						data-name="$b"
 						
 						data-importance="3">
@@ -800,6 +813,19 @@
 						data-since="0.3"
 						data-importance="3">
 						debounce
+						
+						
+					</a>
+				</li>
+			
+				<li>
+					<a
+						href="#!Matreshka.deepFind"
+						title="Returns a property from nested object"
+						data-name="deepFind"
+						data-since="1.5"
+						data-importance="3">
+						deepFind
 						
 						
 					</a>
@@ -1182,6 +1208,19 @@
 						
 						data-importance="3">
 						isXDR
+						
+						
+					</a>
+				</li>
+			
+				<li>
+					<a
+						href="#!Matreshka.parserBrackets"
+						title="Contains brackets for bindings parser"
+						data-name="parserBrackets"
+						data-since="1.5"
+						data-importance="3">
+						parserBrackets
 						
 						
 					</a>
@@ -1899,7 +1938,7 @@
 
 <a
 	href="#!$b"
-	title="Balalaika micro-library"
+	title="bQuery micro-library"
 	data-since="0.1"
 	data-importance="2"
 >
