--- a/src/_includes/ru/doc_menu.html
+++ b/src/_includes/ru/doc_menu.html
@@ -99,6 +99,19 @@
 					
 			
 				<li>
+					<a href="#!Matreshka-bindSandbox"
+						title="Привязывает песочницу"
+						data-name="bindSandbox"
+						data-since="1.5"
+						data-importance="3">
+						bindSandbox
+						
+						
+						
+					</a>
+					
+			
+				<li>
 					<a href="#!Matreshka-bound"
 						title="Возвращает первый привязанный элемент или null"
 						data-name="bound"
@@ -292,7 +305,7 @@
 								
 									<li>
 										<a href="#!Matreshka-linkProps(2)"
-											title="Дополнительная возможность метода Matreshka#linkProps: зависимость от значений свойств других экземпляров"
+											title="Дополнительная возможность метода Matreshka#linkProps: зависимость от значений свойств других объектов"
 											data-name="linkProps#2"
 											data-since="0.2"
 											data-importance="1">
@@ -624,7 +637,7 @@
 			
 				<li>
 					<a href="#!Matreshka-$nodes"
-						title="Объект содержит коллекции (jQuery, Zepto, Balalaika) привязанных элементов для быстрого доступа."
+						title="Объект содержит коллекции (jQuery, Zepto, bQuery) привязанных элементов для быстрого доступа."
 						data-name="$nodes"
 						data-since="1.1"
 						data-importance="2">
@@ -636,7 +649,7 @@
 			
 				<li>
 					<a href="#!Matreshka-$sandbox"
-						title="Свойство содержит HTML песочницу в виде коллекции (jQuery, Zepto, Balalaika)"
+						title="Свойство содержит HTML песочницу в виде коллекции (jQuery, Zepto, bQuery)"
 						data-name="$sandbox"
 						data-since="0.4"
 						data-importance="2">
@@ -691,7 +704,7 @@
 				<li>
 					<a
 						href="#!Matreshka.$(static)"
-						title="Библиотека, используемая Матрешкой (jQuery, Zepto, Balalaika или др.)"
+						title="Библиотека, используемая Матрешкой (jQuery, Zepto, bQuery или др.)"
 						data-name="$"
 						
 						data-importance="2">
@@ -704,7 +717,7 @@
 				<li>
 					<a
 						href="#!Matreshka.$b"
-						title="Встроенная микро-библиотека Балалайка"
+						title="Встроенная микро-библиотека bQuery"
 						data-name="$b"
 						
 						data-importance="3">
@@ -800,6 +813,19 @@
 						data-since="0.3"
 						data-importance="3">
 						debounce
+						
+						
+					</a>
+				</li>
+			
+				<li>
+					<a
+						href="#!Matreshka.deepFind"
+						title="Возвращает свойство во вложенном объекте"
+						data-name="deepFind"
+						data-since="1.5"
+						data-importance="3">
+						deepFind
 						
 						
 					</a>
@@ -1182,6 +1208,19 @@
 						
 						data-importance="3">
 						isXDR
+						
+						
+					</a>
+				</li>
+			
+				<li>
+					<a
+						href="#!Matreshka.parserBrackets"
+						title="Содержит скобки для парсера"
+						data-name="parserBrackets"
+						data-since="1.5"
+						data-importance="3">
+						parserBrackets
 						
 						
 					</a>
@@ -1899,7 +1938,7 @@
 
 <a
 	href="#!$b"
-	title="Микро-библиотека Балалайка"
+	title="Микро-библиотека bQuery"
 	data-since="0.1"
 	data-importance="2"
 >
