--- a/src/sass/site/_header.scss
+++ b/src/sass/site/_header.scss
@@ -84,6 +84,7 @@ header {
 
 		i.back {
 			float: left;
+			padding-left: 5px;
 			@extend .mdi-navigation-arrow-back;
 		}
 	}
@@ -117,6 +118,7 @@ header {
 		@extend .mdi-navigation-menu;
 		float: left;
 		display: none;
+		padding-left: 5px;
 	}
 
 	i.show-search {
@@ -124,7 +126,7 @@ header {
 		float: right;
 		position: absolute;
 		top: 0;
-		right: 0;
+		right: 5px;
 	}
 
 	.default-value {
