--- a/src/_includes/en/promo.html
+++ b/src/_includes/en/promo.html
@@ -4,8 +4,8 @@
 		<img src="img/mk5-logo_text.svg" class="mk-logo-text">
 		<span class="version">v{{ site.data.package.version }}</span>
 		<div class="demo">
-			<output class="out">Event-driven JavaScript framework</output>
-			<input type="text" class="in" value="Event-driven JavaScript framework">
+			<output class="out"></output>
+			<input type="text" class="in" value="Get rid of pasta in your code">
 			<pre class="prettyprint lang-html"><code>&lt;output class=&quot;out&quot;&gt;&lt;/output&gt;
 &lt;input class=&quot;in&quot; type=&quot;text&quot;&gt;
 
@@ -13,7 +13,7 @@
 &lt;script&gt;
 var app = new Matreshka();
 app.bindNode('x', '.in, .out');
-app.x = 'Event-driven JavaScript framework';
+app.x = 'Get rid of pasta in your code';
 &lt;/script&gt;</code></pre>
 		</div>
 		<p>
