--- a/src/_includes/ru/promo.html
+++ b/src/_includes/ru/promo.html
@@ -4,8 +4,8 @@
 		<img src="img/mk5-logo_text.svg" class="mk-logo-text">
 		<span class="version">v{{ site.data.package.version }}</span>
 		<div class="demo">
-			<output class="out">Событийно-ориентированный фреймворк</output>
-			<input type="text" class="in" value="Событийно-ориентированный фреймворк">
+			<output class="out"></output>
+			<input type="text" class="in" value="Понятные приложения без макарон">
 			<pre class="prettyprint lang-html"><code>&lt;output class=&quot;out&quot;&gt;&lt;/output&gt;
 &lt;input class=&quot;in&quot; type=&quot;text&quot;&gt;
 
@@ -13,7 +13,7 @@
 &lt;script&gt;
 var app = new Matreshka();
 app.bindNode('x', '.in, .out');
-app.x = 'Событийно-ориентированный фреймворк';
+app.x = 'Понятные приложения без макарон';
 &lt;/script&gt;</code></pre>
 		</div>
 
