update dependencies & fix some problems

--- a/src/_layouts/main.html
+++ b/src/_layouts/main.html
@@ -101,7 +101,7 @@
 			</div>
 		</script>
 		<script src="js/browser-polyfill.js"></script>
-		<script src="js/app.min.js"></script>
+		<script src="js/app.min.js?1"></script>
 
 	</body>
 </html>
