--- a/src/sass/_prettify.scss
+++ b/src/sass/_prettify.scss
@@ -1,4 +1,5 @@
-/* GitHub Theme */
+/* Tomorrow Theme */
+/* Original theme - https://github.com/chriskempson/tomorrow-theme */
 .prettyprint {
   background: white;
   font-family: Menlo, 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', Monaco, Consolas, monospace;
@@ -9,64 +10,64 @@
 }
 
 .pln {
-  color: #333333;
+  color: #4d4d4c;
 }
 
 @media screen {
   .str {
-    color: #dd1144;
+    color: #718c00;
   }
 
   .kwd {
-    color: #333333;
+    color: #8959a8;
   }
 
   .com {
-    color: #999988;
+    color: #8e908c;
   }
 
   .typ {
-    color: #445588;
+    color: #4271ae;
   }
 
   .lit {
-    color: #445588;
+    color: #f5871f;
   }
 
   .pun {
-    color: #333333;
+    color: #4d4d4c;
   }
 
   .opn {
-    color: #333333;
+    color: #4d4d4c;
   }
 
   .clo {
-    color: #333333;
+    color: #4d4d4c;
   }
 
   .tag {
-    color: navy;
+    color: #c82829;
   }
 
   .atn {
-    color: teal;
+    color: #f5871f;
   }
 
   .atv {
-    color: #dd1144;
+    color: #3e999f;
   }
 
   .dec {
-    color: #333333;
+    color: #f5871f;
   }
 
   .var {
-    color: teal;
+    color: #c82829;
   }
 
   .fun {
-    color: #990000;
+    color: #4271ae;
   }
 }
 @media print, projection {
