prepare stuff for 1.6

--- a/src/_includes/en/doc_menu.html
+++ b/src/_includes/en/doc_menu.html
@@ -247,19 +247,6 @@
 					
 			
 				<li>
-					<a href="#!Matreshka-eq"
-						title="Tests the instance for other object equality"
-						data-name="eq"
-						data-since="0.0.2"
-						data-importance="3">
-						eq
-						
-						
-						
-					</a>
-					
-			
-				<li>
 					<a href="#!Matreshka-get"
 						title="Returns a value of property"
 						data-name="get"
@@ -1015,6 +1002,19 @@
 			
 				<li>
 					<a
+						href="#!Matreshka.orderBy"
+						title="Creates an array of elements, sorted by properties of its items"
+						data-name="orderBy"
+						data-since="1.6"
+						data-importance="3">
+						orderBy
+						
+						
+					</a>
+				</li>
+			
+				<li>
+					<a
 						href="#!Matreshka.parseBindings"
 						title="Parses DOM tree, declaring bindings with properties enclosed in double braces."
 						data-name="parseBindings"
@@ -1195,19 +1195,6 @@
 						
 						data-importance="1">
 						defaultBinders
-						
-						
-					</a>
-				</li>
-			
-				<li>
-					<a
-						href="#!Matreshka.isXDR"
-						title="If Matreshka uses a XDomainRequest hack. In other words, if the current browser is Internet Explorer 8"
-						data-name="isXDR"
-						
-						data-importance="3">
-						isXDR
 						
 						
 					</a>
@@ -1722,6 +1709,19 @@
 						data-since="1.1"
 						data-importance="2">
 						onItemRender
+						
+						
+						
+					</a>
+					
+			
+				<li>
+					<a href="#!Matreshka.Array-orderBy"
+						title="Sorts by properties of the items"
+						data-name="orderBy"
+						data-since="1.6"
+						data-importance="2">
+						orderBy
 						
 						
 						
