--- a/src/_includes/ru/doc_menu.html
+++ b/src/_includes/ru/doc_menu.html
@@ -247,19 +247,6 @@
 					
 			
 				<li>
-					<a href="#!Matreshka-eq"
-						title="Проверяет экземпляр на равенство другому объекту"
-						data-name="eq"
-						data-since="0.0.2"
-						data-importance="3">
-						eq
-						
-						
-						
-					</a>
-					
-			
-				<li>
 					<a href="#!Matreshka-get"
 						title="Возвращает значение свойства"
 						data-name="get"
@@ -1015,6 +1002,19 @@
 			
 				<li>
 					<a
+						href="#!Matreshka.orderBy"
+						title="Сортирует переданный массив по значениям свойств объектов, которые в него входят"
+						data-name="orderBy"
+						data-since="1.6"
+						data-importance="3">
+						orderBy
+						
+						
+					</a>
+				</li>
+			
+				<li>
+					<a
 						href="#!Matreshka.parseBindings"
 						title="Парсит DOM дерево, объявляя привязки свойств, заключенных в двойные фигурные скобки."
 						data-name="parseBindings"
@@ -1195,19 +1195,6 @@
 						
 						data-importance="1">
 						defaultBinders
-						
-						
-					</a>
-				</li>
-			
-				<li>
-					<a
-						href="#!Matreshka.isXDR"
-						title="Использует ли Матрешка хак с XDomainRequest. Другими словами, является ли текущий браузер Internet Explorer 8"
-						data-name="isXDR"
-						
-						data-importance="3">
-						isXDR
 						
 						
 					</a>
@@ -1722,6 +1709,19 @@
 						data-since="1.1"
 						data-importance="2">
 						onItemRender
+						
+						
+						
+					</a>
+					
+			
+				<li>
+					<a href="#!Matreshka.Array-orderBy"
+						title="Сортирует массив по значениям свойств объектов, которые в него входят"
+						data-name="orderBy"
+						data-since="1.6"
+						data-importance="2">
+						orderBy
 						
 						
 						
